styles/main.css
:root {
  --highlighter: rgb(223, 83, 58);
}

html {
  font-size: 16px;
}

@media (max-width: 600px) {
  html {
    font-size: 12px;
  }
}

@media (min-width: 1440px) {
  main {
    max-width: 40%;
  }
}

body {
  font-family: 'Montserrat', sans-serif;
  font-optical-sizing: auto;
  font-weight: 425;
  font-style: normal;
  text-align: center;
  background-color: rgb(217, 191, 239);
}

main {
  background-color: rgba(245, 243, 243, 0.938);
  width: 80%;
  border-radius: 20pt;
  padding: 5px 10px 5px 10px;
}

li {
  border-style: solid;
  border-radius: 5pt;
  margin: 5px;
  padding: 4px;
  border-color: rgb(85, 85, 85);
}

h4 {
  justify-self: center;
  width: 50%;
  font-size: 1rem;
  padding-top: 30px;
  border-top: solid;
  margin-bottom: 5px;
}

p {
  font-size: 1rem;
  margin-left: 20px;
}

h1 {
  color: rgb(0, 119, 255);
}

h2 {
  font-size: 2rem;
  margin-bottom: 10px;
}

span {
  color: var(--highlighter);
}

ul {
  list-style-type: upper-roman;
  padding: 0;
}

h3 {
  margin-top: 10px;
}

figcaption {
  font-size: 0.8rem;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0px auto;
  align-items: center;
}

.flex-container-vertical {
  display: flex;
  flex-direction: column;
  height: 220px;
  align-items: center;
  justify-content: center;
}

.flex-container-horizontal {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.flex-container-nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 20px;
}

.nav {
  border-radius: 15pt;
  border-style: none;
  background-color: rgb(2, 182, 131);
  color: rgb(240, 240, 240);
  font-family: 'Montserrat', Helvetica, sans-serif;
  text-decoration: underline;
  padding: 10px 15px 10px 15px;
  font-weight: 500;
  font-style: normal;
  margin: 15px 20px 10px 20px;
  cursor: pointer;
}

#profile {
  width: 80%;
  height: 80%;
  object-position: center;
  max-height: 150pt;
}

#blog-list {
  list-style-position: inside;
}

#home {
  display: flex;
  border-radius: 15pt;
  border-style: none;
  background-color: rgb(149, 2, 182);
  color: rgb(240, 240, 240);
  font-family: 'Montserrat', Helvetica, sans-serif;
  text-decoration: underline;
  padding: 10px 15px 10px 15px;
  margin-bottom: 5px;
  font-weight: 450;
  font-style: normal;
  font-size: 1rem;
  cursor: pointer;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.exampleImage {
  width: 95%;
}

/* Used for the fixed position example in the CSS blog */
#fixDiv {
  position: fixed;
  width: 120px;
  height: 20px;
  background-color: rgb(83, 0, 128);
  bottom: 0;
  right: 0;
  color: rgb(83, 0, 128);
  border-top-left-radius: 5pt;
  font-size: 10pt;
}

#snow {
  display: flex;
  margin: -10px;
}

#snow-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  max-height: 150pt;
}

